# husky_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: view_robot.launch.py
meshes/: README.md
meshes/mount_description/: 2XL_430.stl  FR12-H104.stl  camera_mount.stl  duro_receiver.STL  fr12_h103gm.stl  neck_camera_holder.stl  wrist_mount.STL
rviz/: view_robot.rviz
urdf/: robot.urdf.xacro
urdf/accessories/: bumper.urdf.xacro  camera_mount.urdf.xacro  dual_arm_bulkhead.urdf.xacro  dynamixel_2xl430.urdf.xacro  fath_pivot_mount.urdf.xacro  fr12_bracket.urdf.xacro  fr12_h104_pan.urdf.xacro  neck_camera_holder.urdf.xacro  wrist_mount.urdf.xacro
urdf/common/: materials.xacro
urdf/control/: a200_ros2_control.xacro  neck_ros2_control.xacro
urdf/manipulators/: robotiq_2f_85.urdf.xacro  ur5e.urdf.xacro
urdf/platform/: a200.urdf.xacro  wheel.urdf.xacro
urdf/sensors/: gps.urdf.xacro  imu.urdf.xacro  realsense_d435.urdf.xacro  velodyne_vlp16.urdf.xacro
