<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husky_description</name>
  <version>0.1.0</version>
  <description>
    Modular xacro description for a Clearpath Husky A200 (unit 0876)
    equipped with dual UR5e arms, Robotiq 2F-85 grippers, a Velodyne
    VLP-16 lidar, dual RealSense D435 cameras, an IMU and a GPS antenna.
  </description>

  <maintainer email="hesam@todo.todo">hesam</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
